Mejoras en responsividad

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="aboutme.css">
     <link rel="stylesheet" href="portfolio_projects.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="responsiveness.css">
 </head>
 <body>
     <!--Barra de navegacion-->
@@ -70,7 +71,7 @@
             <ul>
                 <li><a href="enlace-a-certificado-1.html">HTML Certificate</a></li>
                 <li><a href="enlace-a-certificado-2.html">CSS Certificate</a></li>
-                <li><a href="enlace-a-certificado-3.html">Python Certificate</a></li>
+                <li><a href="https://mastermind.ac/certificates/06608d1ce9304ccf9ed3af4e50d28d59">Python Certificate</a></li>
                 <!-- Agrega más enlaces a certificados según lo requieras -->
             </ul>
         </div>
