Cambios en contacto y Resume

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
             </ul>
             <h3>Certificates</h3>
             <ul>
-                <li><a href="enlace-a-certificado-1.html">HTML Certificate</a></li>
-                <li><a href="enlace-a-certificado-2.html">CSS Certificate</a></li>
+                <li><a href="https://mastermind.ac/certificates/ceb171c735e647c4bda08b2acd0d3e5e">HTML & CSS Certificate</a></li>
                 <li><a href="https://mastermind.ac/certificates/06608d1ce9304ccf9ed3af4e50d28d59">Python Certificate</a></li>
                 <!-- Agrega más enlaces a certificados según lo requieras -->
             </ul>
@@ -144,8 +143,8 @@
         
         <!-- Detalles de Contacto -->
         <div class="contact-details">
-            <p>Email: <a href="mailto:josemartincarranza@gmail.com">josemartincarranza@gmail.com</a></p>
-            <p>Phone: <a href="tel:+50488361570">+504 8836-1570</a></p>
+            <p>Email: josemartincarranza@gmail.com</a></p>
+            <p>Phone: +504 8836-1570</a></p>
         </div>
         
         <!-- Redes Sociales -->
@@ -163,7 +162,7 @@
         <div class="resume-section">
             <h3>Resume</h3>
             <img src="martin.jpg" alt="Jose Martin Carranza">
-            <button>Download Resume</button>
+            <a href="jmcr_resume.pdf"><button>Download Resume</button></a>
         </div> 
     </section>
 </body>
