--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="resume-section">
             <h3>Resume</h3>
             <img src="martin.jpg" alt="Jose Martin Carranza">
-            <a href="jmcr_resume.pdf"><button>Download Resume</button></a>
+            <a href="Resume José Martín Carranza Rajo.pdf"><button>Download Resume</button></a>
         </div> 
     </section>
 </body>
