jQuery and more skills

--- a/index.html
+++ b/index.html
@@ -93,17 +93,19 @@
             </p>
         </div>
         <div class="skills">
-            <h3>Programing Languages</h3>
+            <h3>Programming Languages</h3>
             <ul>
-                <li><i class="fab fa-html5"></i> HTML</li>
-                <li><i class="fab fa-css3-alt"></i> CSS</li>
-                <li><i class="fab fa-python"></i> Python</li>
-                <li><i class="fas fa-database"></i> SQL</li>
-                <li><i class="fab fa-js"></i> JavaScript</li> <!-- Ícono de JavaScript -->
-                <li><i class="fab fa-react"></i> React-Native</li> <!-- Ícono de React (para representar React-Native) -->
-                <li><i class="fab fa-bootstrap"></i> Bootstrap</li> <!-- Ícono de Bootstrap -->
-            </ul>
-            <h3>Certificates</h3>
+                <li><i class="fab fa-html5"></i> HTML </li>
+                <li><i class="fab fa-css3-alt"></i> CSS </li>
+                <li><i class="fab fa-python"></i> Python </li>
+                <li><i class="fas fa-database"></i> SQL </li>
+                <li><i class="fab fa-js"></i> JavaScript </li>
+                <li><i class="fab fa-react"></i> React-Native </li>
+                <li><i class="fab fa-bootstrap"></i> Bootstrap </li>
+                <li><i class="fa-solid fa-user"></i> jQuery </li>
+                <li><i class="fa-brands fa-github"></i> GitHub </li>
+            </ul>        
+            <h3 class="certicates">Certificates</h3>
             <ul>
                 <li><a href="https://mastermind.ac/certificates/ceb171c735e647c4bda08b2acd0d3e5e">HTML & CSS Certificate</a></li>
                 <li><a href="https://mastermind.ac/certificates/06608d1ce9304ccf9ed3af4e50d28d59">Python Certificate</a></li>
