cambios en info

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio de Martin Carranza, Programador y Ingeniero Electrónico.">
     <title>Portfolio, Martin Carranza</title>
         
     <!-- Fuentes -->
@@ -74,9 +75,9 @@
     <!--Bloque de inicio-->
     <section id="info" class="info bg-dark" data-aos="fade-right" data-aos-delay="200">
         <h1>Martin Carranza Jr</h1>
-        <h3>#Programmer</h3>
-        <h3>#Electronic</h3>
-    </section>
+        <h2>Electronic Engineer & Developer</h2>
+        <a href="#portfolio" class="cta-button">See My Projects</a>
+    </section>    
     <!--Sobre mi-->
     <section id="about_me" class="about_me bg-dark" data-aos="fade-up" data-aos-delay="200">
         <div class="martin-image">
@@ -206,7 +207,6 @@
                 <li><a href="https://github.com/MartinCarranzaJr" target="_blank"><i class="fab fa-github"></i></a> GitHub </li>
                 <li><a href="https://www.instagram.com/martincarranzajr/" target="_blank"><i class="fab fa-instagram"></i></a> Instagram </li>
                 <li><a href="https://wa.me/50488361570"><i class="fab fa-whatsapp"></i></a> WhatsApp </li>
-                <!-- Puedes agregar más íconos de redes sociales aquí -->
             </ul>
         </div>
         
