--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                     <div class="carousel-item active">
                         <img src="maxresdefault.jpg" alt="Pokemon Game" class="d-block w-100">
                         <div class="carousel-caption d-md-block bg-transparent text-white p-3">
-                            <h4>Pokemon Game</h4>
-                            <p>Small Pokémon game inspired by its Nintendo DS versions, become a Pokémon master!</p>
+                            <h4 class="description-t">Pokemon Game</h4>
+                            <p class="description">Small Pokémon game inspired by its Nintendo DS versions, become a Pokémon master!</p>
                             <a href="https://github.com/MartinCarranzaJr/PokemonGame.git" class="btn btn-success" target="_blank">Link to github</a>
                         </div>
                     </div>
@@ -150,8 +150,8 @@
                     <div class="carousel-item">
                         <img src="assistant.jpg" alt="Voice Assistant" class="d-block w-100">
                         <div class="carousel-caption d-md-block bg-transparent text-white p-3">
-                            <h4>Voice Assistant</h4>
-                            <p>Small code as a foundation to create a voice assistant or to speak with your computer.</p>
+                            <h4 class="description-t">Voice Assistant</h4>
+                            <p class="description">Small code as a foundation to create a voice assistant or to speak with your computer.</p>
                             <a href="https://github.com/MartinCarranzaJr/VoiceAssistant.git" class="btn btn-success" target="_blank">Link to github</a>
                         </div>
                     </div>
@@ -160,8 +160,8 @@
                     <div class="carousel-item">
                         <img src="currency.png" alt="Currency Converter" class="d-block w-100">
                         <div class="carousel-caption d-md-block bg-transparent text-white p-3">
-                            <h4>Currency Converter</h4>
-                            <p>A basic currency converter program.</p>
+                            <h4 class="description-t">Currency Converter</h4>
+                            <p class="description">A basic currency converter program.</p>
                             <a href="https://github.com/MartinCarranzaJr/Currency-Converter.git" class="btn btn-success" target="_blank">Link to github</a>
                         </div>
                     </div>
@@ -170,8 +170,8 @@
                     <div class="carousel-item">
                         <img src="decision.jpg" alt="Decision Game" class="d-block w-100">
                         <div class="carousel-caption d-md-block bg-transparent text-whit p-3">
-                            <h4>Decision Game</h4>
-                            <p>A game based on your decisions, choose which path you want to take and reach the end of the story.</p>
+                            <h4 class="description-t">Decision Game</h4>
+                            <p class="description">A game based on your decisions, choose which path you want to take and reach the end of the story.</p>
                             <a href="https://github.com/MartinCarranzaJr/DecisionGame.git" class="btn btn-success" target="_blank">Link to github</a>
                         </div>
                     </div>
@@ -180,8 +180,8 @@
                     <div class="carousel-item">
                         <img src="blog-abm.png" alt="Blog about me" class="d-block w-100">
                         <div class="carousel-caption d-md-block bg-transparent text-white p-3">
-                            <h4>Blog about me</h4>
-                            <p>A responsive web created with Bootstrap</p>
+                            <h4 class="description-t">Blog about me</h4>
+                            <p class="description">A responsive web created with Bootstrap</p>
                             <a href="https://martincarranzajr.github.io/AboutMe/" class="btn btn-success" target="_blank">Link to github</a>
                         </div>
                     </div>
